# oreally

./: README.md  app.py  main.py  pyproject.toml  requirements.txt  webscrapper.py
src/: chat.py  config.py  ingestion.py  markdown.py  prompts.py  response.py
